--- a/presentation/src/main/res/layout/fragment_event.xml
+++ b/presentation/src/main/res/layout/fragment_event.xml
@@ -15,8 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/event_FL"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -24,28 +23,36 @@
                 android:id="@+id/bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|center"
                 android:alpha="0"
+                app:layout_constraintTop_toTopOf="parent"
                 app:titleText="@string/event" />
 
             <View
                 android:id="@+id/event_View"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/black"
+                android:alpha="0.6"
                 android:onClick="@{()->viewModel.clickOutsideBottomSheet()}" />
+
+            <FrameLayout
+                android:id="@+id/event_FL"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="2dp" />
 
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/event_NSV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fillViewport="true">
+                android:fillViewport="true"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
                     android:id="@+id/event_clickedEvent_LL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->viewModel.clickOutsideBottomSheet()}"
                     android:orientation="vertical"
                     tools:context=".feature.event.EventFragment">
 
@@ -106,6 +113,6 @@
                         app:layout_constraintTop_toTopOf="parent" />
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
-        </FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
