--- a/presentation/src/main/res/navigation/main_nav.xml
+++ b/presentation/src/main/res/navigation/main_nav.xml
@@ -14,7 +14,7 @@
     <fragment
         android:id="@+id/splash_fragment"
         android:name="kr.foorun.uni_eat.feature.splash.SplashFragment"
-        android:label="Global" >
+        android:label="SplashFragment" >
         <argument
             android:name="@string/hide_bottom"
             app:argType="boolean"
