--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -53,5 +53,6 @@
 
     <dimen name="arrow_right_width">6dp</dimen>
     <dimen name="arrow_right_height">11dp</dimen>
+    <dimen name="my_page_introduce_text_17">17sp</dimen>
 
 </resources>
