--- a/presentation/src/main/res/layout/fragment_event.xml
+++ b/presentation/src/main/res/layout/fragment_event.xml
@@ -44,7 +44,7 @@
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/event_NSV"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:fillViewport="true"
                 app:layout_constraintTop_toTopOf="parent">
 
