--- a/presentation/src/main/res/layout/base_edittext.xml
+++ b/presentation/src/main/res/layout/base_edittext.xml
@@ -17,8 +17,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+            android:id="@+id/under_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/under_line"
+            android:layout_marginTop="9dp"
+            app:layout_constraintTop_toBottomOf="@id/base_edittext"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
