--- a/presentation/src/main/res/layout/fragment_article_post.xml
+++ b/presentation/src/main/res/layout/fragment_article_post.xml
@@ -186,12 +186,13 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tag_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/margin_21"
                     android:layout_marginEnd="@dimen/margin_21"
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="@dimen/margin_21"
                     android:overScrollMode="never"
+                    android:nestedScrollingEnabled="false"
                     app:spanCount="4"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintStart_toStartOf="parent"
