--- a/presentation/src/main/res/layout/fragment_edit_my_page.xml
+++ b/presentation/src/main/res/layout/fragment_edit_my_page.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="kr.foorun.uni_eat.feature.mypage.edit.EditMyPageViewModel" />
@@ -12,6 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context="kr.foorun.uni_eat.feature.mypage.edit.EditMyPageFragment">
 
         <kr.foorun.uni_eat.base.view.base.base_layout.BaseBarConstraintView
@@ -22,6 +22,7 @@
             app:frontVisible="true"
             app:rearVisible="true"
             app:rearImage="@drawable/complete"
+            app:setViewModel="@{viewModel}"
             app:layout_constraintTop_toTopOf="parent"
             app:titleText="@string/edit_profile" />
 
@@ -39,30 +40,39 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="23dp"
                 android:layout_marginStart="@dimen/margin_21"
-                android:layout_marginEnd="@dimen/margin_21"
-                android:background="@drawable/radius_white_6">
+                android:layout_marginEnd="@dimen/margin_21">
 
-                <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
-                    android:id="@id/image"
-                    android:layout_width="93dp"
-                    android:layout_height="93dp"
-                    android:layout_marginTop="23dp"
-                    app:glide="@{viewModel.user.image}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-                <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
-                    android:id="@+id/change_image_text"
-                    android:layout_width="wrap_content"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/image_frame"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="23dp"
-                    android:text="@string/change_image"
-                    android:textStyle="bold"
+                    android:onClick="@{() -> viewModel.imageClicked()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/image"
-                    app:setUnderLine="@{true}" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+                        android:id="@id/image"
+                        android:layout_width="93dp"
+                        android:layout_height="93dp"
+                        android:layout_marginTop="23dp"
+                        app:glide="@{viewModel.image}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
+                        android:id="@+id/change_image_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="23dp"
+                        android:text="@string/change_image"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/image"
+                        app:setUnderLine="@{true}" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -70,7 +80,7 @@
                     android:layout_marginHorizontal="@dimen/margin_21"
                     android:layout_marginTop="51dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/change_image_text">
+                    app:layout_constraintTop_toBottomOf="@id/image_frame">
 
                     <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                         android:id="@+id/nick"
@@ -88,15 +98,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/nick_form_hint"
-                        app:setUnderLine="@{@color/black}"
+                        app:underLine="true"
+                        app:textWatcher="@{viewModel.nickTextWatcher}"
+                        app:setEditText="@{viewModel.user.name}"
                         android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/nick" />
 
                     <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
+                        android:id="@+id/nick_alert"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="사용 가능한 메일입니다"
                         android:textSize="13sp"
                         android:textColor="@color/large_text"
                         android:layout_marginTop="@dimen/margin_11"
@@ -104,15 +116,15 @@
                         app:layout_constraintTop_toBottomOf="@id/nick_edit" />
 
                     <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
-                        android:id="@+id/alert_nick"
+                        android:id="@+id/introduce"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/nick"
+                        android:text="@string/introduce"
                         android:textColor="@color/large_text"
                         android:textSize="@dimen/text_size_large_15"
                         android:textStyle="bold"
                         android:layout_marginTop="53dp"
-                        app:layout_constraintTop_toBottomOf="@id/nick_edit"
+                        app:layout_constraintTop_toBottomOf="@id/nick_alert"
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <kr.foorun.uni_eat.base.view.base.base_layout.BaseEditTextLayout
@@ -120,10 +132,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="@string/introduce_hint"
-                        app:setUnderLine="@{@color/black}"
+                        app:underLine="true"
+                        android:maxLength="50"
+                        app:setEditText="@{viewModel.user.introduce}"
                         android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/alert_nick" />
+                        app:layout_constraintTop_toBottomOf="@id/introduce" />
 
                     <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                         android:id="@+id/tag"
@@ -140,13 +154,15 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/tag_recycler"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                        app:spanCount="4"
-                        android:overScrollMode="never"
+                        android:layout_height="match_parent"
                         android:layout_marginTop="15dp"
-                        app:layout_constraintTop_toBottomOf="@id/tag"/>
+                        android:layout_marginBottom="@dimen/margin_21"
+                        android:overScrollMode="never"
+                        android:nestedScrollingEnabled="false"
+                        app:spanCount="4"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:layout_constraintTop_toBottomOf="@id/tag"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
