--- a/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
+++ b/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
@@ -10,6 +10,7 @@
         <attr name="android:background"/>
         <attr name="android:textSize"/>
         <attr name="android:textColorHint"/>
+        <attr name="underLine" format="boolean"/>
         <attr name="defaultValue" format="string"/>
     </declare-styleable>
 </resources>
