--- a/presentation/src/main/res/layout/base_edittext.xml
+++ b/presentation/src/main/res/layout/base_edittext.xml
@@ -17,6 +17,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+            android:id="@+id/rear_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -25,7 +32,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/under_line"
-            android:layout_marginTop="9dp"
             app:layout_constraintTop_toBottomOf="@id/base_edittext"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
