--- a/presentation/src/main/res/layout/fragment_edit_my_page.xml
+++ b/presentation/src/main/res/layout/fragment_edit_my_page.xml
@@ -101,6 +101,9 @@
                         app:underLine="true"
                         app:textWatcher="@{viewModel.nickTextWatcher}"
                         app:setEditText="@{viewModel.user.name}"
+                        app:editRearVisible="true"
+                        app:editRearImage="@drawable/check"
+                        app:setRearOnClick="@{() -> viewModel.duplicateCheckClicked()}"
                         android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/nick" />
@@ -111,7 +114,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="13sp"
                         android:textColor="@color/large_text"
-                        android:layout_marginTop="@dimen/margin_11"
+                        android:layout_marginTop="11dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/nick_edit" />
 
@@ -134,6 +137,7 @@
                         android:hint="@string/introduce_hint"
                         app:underLine="true"
                         android:maxLength="50"
+                        app:textWatcher="@{viewModel.introduceTextWatcher}"
                         app:setEditText="@{viewModel.user.introduce}"
                         android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
