--- a/presentation/src/main/res/navigation/my_nav.xml
+++ b/presentation/src/main/res/navigation/my_nav.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_my_page_to_myPageMoreFragment"
             app:destination="@id/myPageMoreFragment" />
+        <action
+            android:id="@+id/action_my_page_to_myPageEmailFragment"
+            app:destination="@id/myPageEmailFragment" />
     </fragment>
 
     <fragment
@@ -51,6 +54,17 @@
         android:id="@+id/editMyPageFragment"
         android:name="kr.foorun.uni_eat.feature.mypage.edit.EditMyPageFragment"
         android:label="EditMyPageFragment" >
+
+        <argument
+            android:name="@string/hide_bottom"
+            app:argType="boolean"
+            android:defaultValue="true" />
+    </fragment>
+    <fragment
+        tools:layout="@layout/fragment_my_page_email"
+        android:id="@+id/myPageEmailFragment"
+        android:name="kr.foorun.uni_eat.feature.mypage.email.MyPageEmailFragment"
+        android:label="MyPageEmailFragment" >
 
         <argument
             android:name="@string/hide_bottom"
