--- a/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
+++ b/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
@@ -10,7 +10,8 @@
         <attr name="android:background"/>
         <attr name="android:textSize"/>
         <attr name="android:textColorHint"/>
-        <attr name="underLine" format="boolean"/>
+        <attr name="editUnderLineVisible" format="boolean"/>
+        <attr name="underLineImage" format="color|reference"/>
         <attr name="editRearImage" format="reference|color"/>
         <attr name="editRearVisible" format="boolean"/>
         <attr name="defaultValue" format="string"/>
