--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <color name="small_text">#595959</color>
     <color name="large_text">#191919</color>
+    <color name="text_navy">#201F31</color>
     <color name="explain_text">#FFC8B8</color>
 
     <color name="black_60">#99000000</color>
