--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -55,5 +55,6 @@
     <dimen name="arrow_right_height">11dp</dimen>
     <dimen name="my_page_introduce_text_17">17sp</dimen>
     <dimen name="small_explain_text_13">13sp</dimen>
+    <dimen name="large_text2">31sp</dimen>
 
 </resources>
