--- a/presentation/src/main/res/layout/fragment_event.xml
+++ b/presentation/src/main/res/layout/fragment_event.xml
@@ -65,6 +65,19 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
+                        <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
+                            android:id="@+id/test"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="56dp"
+                            android:layout_marginEnd="30dp"
+                            android:letterSpacing="-0.05"
+                            android:text="신고하기 테스트"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <LinearLayout
                             android:id="@+id/event_filter_LL"
                             android:layout_width="wrap_content"
