--- a/presentation/src/main/res/layout/fragment_event.xml
+++ b/presentation/src/main/res/layout/fragment_event.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/event_FL"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:foregroundGravity="center"
                 android:elevation="2dp" />
 
             <androidx.core.widget.NestedScrollView
